--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,10 +8,8 @@ marshmallow==3.2.0
 pytest==5.4.1
 requests==2.19.1
 
-
 psycopg2==2.8.4
 SQLAlchemy==1.3.1
-
-
 Flask-JWT==0.3.2
 Flask-JWT-Extended==3.24.1
+Faker==4.14.0
